# lab09

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  README.md  REPORT.md  homework_report.md
.github/workflows/: ci.yml  release.yml
_logs/polly/clang-cxx14/: log.txt
_logs/polly/default/: log-0.txt  log.txt
cmake/Hunter/: config.cmake
demo/: main.cpp
solver/: CMakeLists.txt  LICENSE.rtf  main.cpp
