cmake_minimum_required(VERSION 3.4)
project(solver)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(solver main.cpp)

install(TARGETS solver RUNTIME DESTINATION bin)

set(CPACK_PACKAGE_NAME "solver")
set(CPACK_PACKAGE_VERSION_MAJOR 1)
set(CPACK_PACKAGE_VERSION_MINOR 0)
set(CPACK_PACKAGE_VERSION_PATCH 0)
set(CPACK_PACKAGE_VERSION "\${CPACK_PACKAGE_VERSION_MAJOR}.\${CPACK_PACKAGE_VERSION_MINOR}.\${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Solver application")

set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Makhdi1")
set(CPACK_RPM_PACKAGE_LICENSE "MIT")

include(CPack)
