cmake_minimum_required(VERSION 3.5)
project(solver)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(solver main.cpp)

install(TARGETS solver RUNTIME DESTINATION bin)

# CPack settings
set(CPACK_PACKAGE_NAME "solver")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Solver application")

set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Makhdi1")
set(CPACK_DEBIAN_PACKAGE_VERSION "1.0.0")

set(CPACK_RPM_PACKAGE_LICENSE "MIT")
set(CPACK_RPM_PACKAGE_VERSION "1.0.0")

include(CPack)


# WiX settings for MSI
set(CPACK_WIX_LICENSE_RTF \${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.rtf)
set(CPACK_RESOURCE_FILE_LICENSE \${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.rtf)
